# deepseek-fin-qa

./: .gitignore  Dockerfile  LICENSE  README.md  flake.nix  pyproject.toml  report.md
.devcontainer/: devcontainer.json
scripts/: qa.py
src/deepseek_fin_qa/: log.py  prompts.py  settings.py
src/deepseek_fin_qa/models/: base.py  groq.py  ollama.py
src/deepseek_fin_qa/schemas/: metrics.py  qa.py
src/deepseek_fin_qa/utils/: cache.py  evaluation.py
tests/: test_evaluation.py
