[project]
name = "deepseek-fin-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "llama-index>=0.12.15",
    "llama-index-llms-groq>=0.3.1",
    "llama-index-llms-ollama>=0.5.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "deepseek-fin-qa",
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D203", "D213", "COM812"]

[tool.uv.sources]
deepseek-fin-qa = { workspace = true }
